--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,22 +1,24 @@
 <idea-plugin>
-    <!-- id should not be changed! -->
     <id>com.sap.cap.cds.intellij</id>
     <name>CAP CDS Language Support</name>
+    <category>Custom Language</category>
     <vendor url="https://sap.com">SAP SE</vendor>
+    <description><![CDATA[<p><strong>CAP CDS Language Support for IntelliJ.</strong>
+This plugin provides support for the CDS language in IntelliJ. It enables you to write, edit, and validate CDS files with syntax highlighting, code completion, diagnostics, and more. Supported IDEs include IntelliJ IDEA, WebStorm, and other commercial IntelliJ products.</p>
+<p><a href="https://cap.cloud.sap/docs/">More information on CAP</a></p>
+<!--<p><br/></p>-->
+<h2>Features:</h2>
+<ul>
+    <li>Syntax highlighting</li>
+    <li>Code completion</li>
+    <li>Goto definition</li>
+    <li>Hover documentation</li>
+    <li>Document formatting</li>
+    <li>Diagnostics</li>
+    <li>Quick fixes</li>
+</ul>
 
-    <description><![CDATA[
-        This plugin adds language support for CAP CDS. It currently supports the following features in commercial JetBrains IDEs including IDEA Ultimate and WebStorm:
-        <ul>
-            <li> Syntax Highlighting
-            <li> Diagnostics
-            <li> Quick Fixes
-            <li> Code Completion
-            <li> Goto Definition
-            <li> Document Formatting
-            <li> Hover documentation
-        </ul>
-        For more information on CAP, visit <a href="https://cap.cloud.sap/docs/">CAPire</a>.
-    ]]></description>
+The set of features will grow with future releases of the plugin, according to the development of the JetBrains IntelliJ LSP API.]]></description>
 
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.ultimate</depends>
