--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -59,16 +59,12 @@ The set of features will grow with future releases of the plugin, according to t
         />
     </projectListeners>
 
-    <change-notes>
-        <![CDATA[
-    v7.2.1 (05 Mar 2024):
-    <ul>
-      <li>includes @sap/cds-lsp 7.6.1 with:
+    <change-notes><![CDATA[<h2>New Features</h2>
+<ul>
+    <li>include @sap/cds-lsp 7.6.1 with:
           <ul>
               <li>fix: elements snippet now works when annotating artifacts in namespaces and/or contexts or if the brace after the elements is still missing</li>
           </ul>
-      </li>
-    </ul>
-    ]]>
-    </change-notes>
+    </li>
+</ul>]]></change-notes>
 </idea-plugin>
