--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,7 +4,7 @@
     <category>Custom Language</category>
     <vendor url="https://sap.com">SAP SE</vendor>
     <description><![CDATA[<p><strong>CAP CDS Language Support for IntelliJ.</strong>
-This plugin provides support for the CDS language in IntelliJ. It enables you to write, edit, and validate CDS files with syntax highlighting, code completion, diagnostics, and more. Supported IDEs include IntelliJ IDEA, WebStorm, and other commercial IntelliJ products.</p>
+This plugin provides support for the CDS language in IntelliJ. It enables you to write, edit, and validate CDS files with syntax highlighting, code completion, formatting, diagnostics, and more. Supported IDEs include IntelliJ IDEA, WebStorm, and other commercial IntelliJ products.</p>
 <p><a href="https://cap.cloud.sap/docs/">More information on CAP</a></p>
 <!--<p><br/></p>-->
 <h2>Features:</h2>
