--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -61,6 +61,7 @@ The set of features will grow with future releases of the plugin, according to t
 
     <change-notes><![CDATA[<h2>New Features</h2>
 <ul>
-    <li>resize plugin logo as per JB guidelines</li>
+    <li>resize plugin logo as per guidelines</li>
+    <li>add plugin logo and file icon for dark themes</li>
 </ul>]]></change-notes>
 </idea-plugin>
