build: upload artifact from build-and-test workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,3 +23,10 @@ jobs:
           steps: |-
             build
             test
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build results
+          path: build/distributions/intellij-cds.zip
+          retention-days: 10
