--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,4 +29,5 @@ jobs:
         with:
           name: build results
           path: build/distributions/intellij-cds.zip
+          compression-level: 0
           retention-days: 10
