--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -61,12 +61,15 @@ The set of features will grow with future releases of the plugin, according to t
 
     <change-notes><![CDATA[<h2>New Features</h2>
 <ul>
-    <li>add plugin logo and file icon for dark themes</li>
-    <li>resize plugin logo as per guidelines</li>
-    <li>include @sap/cds-lsp 7.8.0 with:
+    <li>build on IntelliJ Platform 2024.1, thus:
         <ul>
-            <li>formatting logging now includes whitespace even if it may be reduced to empty string, relative alignment positions, and details on inserting delayed items</li>
-            <li>fix: code completion for annotations with `![]` identifiers</li>
+            <li>enable several Code Actions such as 'Convert to doc comment' or 'Maintain translation' to work</li>
+        </ul>
+    </li>
+    <li>provide CDS icon for LSP-server status-bar widget</li>
+    <li>include @sap/cds-lsp 7.8.2 with:
+        <ul>
+            <li>fix: performance issue with indexing CDS files with many annotations</li>
         </ul>
     </li>
 </ul>]]></change-notes>
