build: use pluginVerifier for quality assurance

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,10 @@ tasks {
         dependsOn 'copyLsp'
     }
 
+    verifyPlugin {
+        dependsOn 'copyLsp'
+    }
+
     test {
         dependsOn 'copyLspToInstrumented'
     }
