Revert "build: use pluginVerifier for quality assurance (#22)"
This reverts commit 0db07310f184979768ab4fa2407ebc1dc1977dfb.

--- a/.github/actions/gradle-run/action.yml
+++ b/.github/actions/gradle-run/action.yml
@@ -33,7 +33,7 @@ runs:
       if: ${{ contains(inputs.steps, 'build') }}
       shell: bash
       run: |
-        ./gradlew runPluginVerifier buildPlugin
+        ./gradlew buildPlugin
         ls -la build/distributions
 
     - name: Test
