--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,10 +24,4 @@ jobs:
             build
             test
 
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build results
-          path: build/distributions/intellij-cds.zip
-          compression-level: 0
-          retention-days: 10
+      - uses: ./.github/actions/upload-installable-zip
