--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 import org.codehaus.groovy.runtime.GStringImpl
+import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '1.17.2'
+    id 'org.jetbrains.intellij.platform' version '2.0.1'
 }
 
 ext {
@@ -27,19 +28,36 @@ if (hasLocalProperties.get()) {
 
 repositories {
     mavenCentral()
+
+    intellijPlatform {
+        defaultRepositories()
+        jetbrainsRuntime()
+    }
 }
 
 dependencies {
     implementation 'org.jetbrains:annotations:24.1.0'
-    implementation 'org.json:json:20240205'
-    implementation 'org.apache.maven:maven-artifact:3.9.7'
-}
+    implementation 'org.json:json:20240303'
+    implementation 'org.apache.maven:maven-artifact:3.9.8'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.3'
+    testCompileOnly 'junit:junit:4.13.2'
 
-sourceSets {
-    main {
-        java {
-            srcDirs('src/main/gen')
-        }
+    intellijPlatform {
+        String type = project.findProperty('platformType')
+        String version = project.findProperty('platformVersion')
+        create(type, version)
+
+        bundledPlugins(['com.intellij.java', 'org.jetbrains.plugins.textmate'])
+
+        instrumentationTools()
+        pluginVerifier()
+        testFramework(TestFrameworkType.Platform.INSTANCE)
+        testFramework(TestFrameworkType.Plugin.Java.INSTANCE)
+
+        // TODO re-enable config of local IDE if still possible
+        //        if (project.hasProperty('local.ideDir')) {
+        //            local(project.file(project.findProperty('local.ideDir')))
+        //        }
     }
 }
 
@@ -49,19 +67,12 @@ java {
     }
 }
 
-intellij {
-    pluginName = project.findProperty('pluginName')
-    version = project.findProperty('platformVersion')
-    type = project.findProperty('platformType')
-    updateSinceUntilBuild.set(false)
-    plugins = ['org.jetbrains.plugins.textmate']
+intellijPlatform {
+    buildSearchableOptions = false
+    autoReload = /* set to true to enable plugin reload on FS changes inside plugin */ false
 }
 
 tasks {
-    buildSearchableOptions {
-        enabled = false
-    }
-
     wrapper {
         gradleVersion = project.findProperty('gradleVersion')
     }
@@ -73,10 +84,6 @@ tasks {
 
     runIde {
         dependsOn 'copyLsp', 'syncSandboxIdeConf'
-        autoReloadPlugins = /* set to true to enable plugin reload on FS changes inside plugin */ false
-        if (project.hasProperty('local.ideDir')) {
-            ideDir = project.file(project.findProperty('local.ideDir'))
-        }
     }
 
     buildPlugin {
