chore: adopt new plugin name

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
     <id>com.sap.cap.cds</id>
-    <name>CAP CDS Language Support</name>
+    <name>SAP CDS Language Support</name>
     <category>Custom Language</category>
     <vendor url="https://sap.com">SAP SE</vendor>
     <description><![CDATA[<p><strong>CAP CDS Language Support for IntelliJ.</strong>
