--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 
 # Plugin name part used in generated ZIP and name of plugin directory in sandbox directory -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#intellij-extension-pluginname
 # Keep pluginName in sync with the one declared in Java!
-pluginName = intellij-cds
+archiveName = cds-intellij.zip
 pluginRepositoryUrl = https://github.com/cap-js/cds-intellij
 # SemVer format -> https://semver.org
-pluginVersion = 8.0.0
+pluginVersion = 1.0.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 242
