chore: reset plugin for marketplace (#48)
- adopt new plugin name
- unify plugin and language names
- reset plugin version
- change zip filename
- remove irrelevant manifest tag

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,8 @@
 <idea-plugin>
     <id>com.sap.cap.cds</id>
-    <name>CAP CDS Language Support</name>
-    <category>Custom Language</category>
-    <vendor url="https://sap.com">SAP SE</vendor>
-    <description><![CDATA[<p><strong>CAP CDS Language Support for IntelliJ.</strong>
+    <name>SAP CDS Language Support</name>
+    <vendor url="https://sap.com/">SAP SE</vendor>
+    <description><![CDATA[<p><strong>SAP CDS Language Support for IntelliJ.</strong>
 This plugin provides support for the CDS language in IntelliJ. It enables you to write, edit, and validate CDS files with syntax highlighting, code completion, formatting, diagnostics, and more. Supported IDEs include IntelliJ IDEA, WebStorm, and other commercial IntelliJ products.</p>
 <p><a href="https://cap.cloud.sap/docs/">More information on CAP</a></p>
 <!--<p><br/></p>-->
