--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -59,11 +59,8 @@ The set of features will grow with future releases of the plugin, according to t
         />
     </projectListeners>
 
-    <change-notes><![CDATA[<h2>New Features</h2>
-<ul>
-    <li>build on IntelliJ Platform 2024.2, enabling:</li>
+    <change-notes><![CDATA[ <h3>Added</h3>
     <ul>
-        <li>Find References</li>
-    </ul>
-</ul>]]></change-notes>
+        <li>Support Find References</li>
+    </ul> ]]></change-notes>
 </idea-plugin>
