--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: ./.github/actions/gradle-run
         with:
           steps: |-
+            test
             build
             test
 
