ci: directly upload installable ZIP (#58)
Also test before build.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -21,7 +21,11 @@ jobs:
       - uses: ./.github/actions/gradle-run
         with:
           steps: |-
-            build
             test
+            build
 
-      - uses: ./.github/actions/upload-installable-zip
+      - name: Upload installable ZIP
+        uses: actions/upload-artifact@v3
+        with:
+          name: cds-intellij
+          path: build/distributions/cds-intellij.zip
