--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,17 +1,17 @@
-name: Build and Test
+name: Publish
 
 on:
   workflow_dispatch:
 
 concurrency:
-  group: build-and-test-${{ github.ref }}
+  group: publish-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
   contents: write
 
 jobs:
-  build-and-test:
+  release-build:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
@@ -24,4 +24,9 @@ jobs:
             test
             build
 
-      - uses: ./.github/actions/upload-installable-zip
+      - uses: ./.github/actions/gradle-run
+        with:
+          steps: |-
+            publish
+        env:
+          JB_TOKEN: ${{ JB_TOKEN }}
