--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -57,16 +57,6 @@ The set of features will grow with future releases, aligned with the development
 
     <change-notes><![CDATA[ <h3>Changed</h3>
 <ul>
-    <li>include @sap/cds-lsp 8.2.1 with:
-        <ul>
-            <li>code completion for artifacts within `using` statements now also completes single name segments with complete name</li>
-            <li>minimum required Node.js version is now 20.9.0</li>
-            <li>hover and completion proposal details now show artifact kind</li>
-            <li>fix: highlighting of element names in annotate statements and of special element names `entity`, `type`, `event`</li>
-            <li>fix: completion: rename of source folders led to wrong using path proposals</li>
-            <li>fix: completion: using path proposals did not work in multi-line using statements</li>
-            <li>fix: maintain translation quickfix sent wrong document version</li>
-        </ul>
-    </li>
+    <li>remove Node.js version check, which is now done by the LSP server</li>
 </ul> ]]></change-notes>
 </idea-plugin>
