--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ tasks {
     patchPluginXml {
         version = project.findProperty('pluginVersion')
         sinceBuild = project.findProperty('pluginSinceBuild')
+        untilBuild = project.findProperty('pluginUntilBuild')
     }
 
     buildPlugin {
