--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,11 @@
 archiveName = cds-intellij.zip
 pluginRepositoryUrl = https://github.com/cap-js/cds-intellij
 # SemVer format -> https://semver.org
-pluginVersion = 1.1.0
+pluginVersion = 1.1.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 242
+pluginUntilBuild = 243.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IU
