--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -57,6 +57,14 @@ The set of features will grow with future releases, aligned with the development
 
     <change-notes><![CDATA[ <h3>Changed</h3>
 <ul>
-    <li>Specify platform 2024.3 as highest compatible version</li>
+    <li>include @sap/cds-lsp 8.3.2 with:
+        <ul>
+            <li>support for annotation modeler to remove certain code completions from compiler in favor of more suitable ones</li>
+            <li>show absolute name and kind of artifact in hover and completion details</li>
+            <li>analyze-dependencies command now supports rendering to `svg` or `json` string</li>
+            <li>fix: highlighting of CASE-statement keywords when put in their own line</li>
+            <li>fix: analysis of dependencies for certain cases</li>
+        </ul>
+    </li>
 </ul> ]]></change-notes>
 </idea-plugin>
