--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,6 +17,7 @@ The set of features will grow with future releases, aligned with the development
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.ultimate</depends>
     <depends>org.jetbrains.plugins.textmate</depends>
+    <depends>NodeJS</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <fileType
@@ -55,16 +56,8 @@ The set of features will grow with future releases, aligned with the development
         />
     </projectListeners>
 
-    <change-notes><![CDATA[ <h3>Changed</h3>
+    <change-notes><![CDATA[ <h3>Added</h3>
 <ul>
-    <li>include @sap/cds-lsp 8.3.2 with:
-        <ul>
-            <li>support for annotation modeler to remove certain code completions from compiler in favor of more suitable ones</li>
-            <li>show absolute name and kind of artifact in hover and completion details</li>
-            <li>analyze-dependencies command now supports rendering to `svg` or `json` string</li>
-            <li>fix: highlighting of CASE-statement keywords when put in their own line</li>
-            <li>fix: analysis of dependencies for certain cases</li>
-        </ul>
-    </li>
+    <li>Determine suitable Node.js runtime automatically (no need to modify PATH environment variable anymore).</li>
 </ul> ]]></change-notes>
 </idea-plugin>
