--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,7 @@ The set of features will grow with future releases, aligned with the development
                 language="cds"
                 extensions="cds"/>
         <platform.lsp.serverSupportProvider implementation="com.sap.cap.cds.intellij.lsp.ServerSupportProvider"/>
+        <langCodeStyleSettingsProvider implementation="com.sap.cap.cds.intellij.codestyle.CdsLanguageCodeStyleSettingsProvider"/>
         <notificationGroup id="com.sap.cap.cds.intellij.notifications"
                            displayType="BALLOON"/>
     </extensions>
