feat: use actual code-style settings from cds-lsp schema

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType
+import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 
 plugins {
     id 'java'
@@ -117,7 +117,7 @@ tasks {
 
 tasks.register('syncSandboxIdeConf', Copy) {
     onlyIf { hasLocalProperties.get() }
-    into "${tasks.named('prepareSandbox_runWebStorm').map{it.defaultDestinationDirectory}.get().get()}/../config"
+    into "${tasks.named('prepareSandbox_runWebStorm').map { it.defaultDestinationDirectory }.get().get()}/../config"
     into('keymaps') {
         from "${project.findProperty('local.ideConfDir')}/keymaps"
     }
@@ -165,24 +165,33 @@ tasks.register('installLsp', Exec) {
     }
 }
 
+tasks.register('patchJavaSrc', Exec) {
+//    dependsOn installLsp
+    if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+        commandLine 'cmd', '/c', 'node', 'src\\js\\codestyle\\patchJavaSrc.js'
+    } else {
+        commandLine 'sh', '-c', 'src/js/codestyle/patchJavaSrc.js'
+    }
+}
+
 // TODO copy before install
 
 tasks.register('copyLsp', Copy) {
-    dependsOn installLsp
+    dependsOn patchJavaSrc
     mustRunAfter 'buildSearchableOptions'
     from './lsp'
-    into "${tasks.named('prepareSandbox').map{it.pluginDirectory}.get().get()}/lib/cds-lsp"
+    into "${tasks.named('prepareSandbox').map { it.pluginDirectory }.get().get()}/lib/cds-lsp"
 }
 
 tasks.register('copyLspToRunWebStorm', Copy) {
-    dependsOn installLsp
+    dependsOn patchJavaSrc
     mustRunAfter 'buildSearchableOptions'
     from './lsp'
-    into "${tasks.named('prepareSandbox_runWebStorm').map{it.pluginDirectory}.get().get()}/lib/cds-lsp"
+    into "${tasks.named('prepareSandbox_runWebStorm').map { it.pluginDirectory }.get().get()}/lib/cds-lsp"
 }
 
 tasks.register('copyLspToInstrumented', Copy) {
-    dependsOn installLsp
+    dependsOn patchJavaSrc
     from './lsp'
     into './build/instrumented/cds-lsp'
 }
