--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -26,8 +26,15 @@ The set of features will grow with future releases, aligned with the development
                 fieldName="INSTANCE"
                 language="cds"
                 extensions="cds"/>
+
+        <lang.substitutor language="cds" order="first"
+                          implementationClass="com.sap.cap.cds.intellij.CdsLanguageSubstitutor"/>
+
+        <langCodeStyleSettingsProvider
+                implementation="com.sap.cap.cds.intellij.codestyle.CdsLanguageCodeStyleSettingsProvider"/>
+
         <platform.lsp.serverSupportProvider implementation="com.sap.cap.cds.intellij.lsp.ServerSupportProvider"/>
-        <langCodeStyleSettingsProvider implementation="com.sap.cap.cds.intellij.codestyle.CdsLanguageCodeStyleSettingsProvider"/>
+
         <notificationGroup id="com.sap.cap.cds.intellij.notifications"
                            displayType="BALLOON"/>
     </extensions>
